--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <body>
         <h1>Charles G. Mihran</h1>
         <p>
-            charlie.mihran@gmail.com<br>
+            <!-- to obfuscate email -->
+            <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#97;&#114;&#108;&#105;&#101;&#46;&#109;&#105;&#104;&#114;&#97;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;'>&#99;&#104;&#97;&#114;&#108;&#105;&#101;&#46;&#109;&#105;&#104;&#114;&#97;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a><br>
             2386 Santa Catalina Street<br>
             Palo Alto, CA 94303<br>
             (650) 714-7567<br>
