add github link

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Background
             <div class="right">
                 <p>Available on Request.</p>
                 <p><a href="https://www.linkedin.com/in/cmihran">linkedin.com/in/cmihran</a></p>
+                <p><a href="https://www.github.com/cmihran">github.com/cmihran</a></p>
                 <p>Father – Greg Mihran / Sr. Director, CIO/IT Strategic Marketing at Flex International / America Center, San Jose, CA</p>
             </div>
         </div>
