--- a/index.html
+++ b/index.html
@@ -64,14 +64,14 @@
 Background   
             </div>
             <div class="right">
-                <div>2015-Present:  University – GPA 3.5</div>
+                <div>2015-Present:  University - GPA 3.5</div>
                 <ul>
                     <li>University of Washington;  Seattle, WA</li>
                     <li>Freshman, Completed Fall/Winter Quarters</li>
                     <li>Intend to major in Computer Science (CSE)</li>
                 </ul>
                 
-                <div>2011-2015:  High School – GPA 4.2 </div>
+                <div>2011-2015:  High School - GPA 4.2 </div>
                 <ul>
                     <li>Palo Alto High School;  Palo Alto, CA</li>
                     <li>Completed 4 Honors/Advanced Courses</li>
@@ -88,7 +88,7 @@ Background
                 <p>Available on Request.</p>
                 <p><a href="https://www.linkedin.com/in/cmihran">linkedin.com/in/cmihran</a></p>
                 <p><a href="https://www.github.com/cmihran">github.com/cmihran</a></p>
-                <p>Father – Greg Mihran / Sr. Director, CIO/IT Strategic Marketing at Flex International / America Center, San Jose, CA</p>
+                <p>Father - Greg Mihran / Sr. Director, CIO/IT Strategic Marketing at Flex International / America Center, San Jose, CA</p>
             </div>
         </div>
             
