--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
         <p>
             <!-- to obfuscate email -->
             <a href='&#109;&#97;&#105;&#108;&#116;&#111;&#58;&#99;&#104;&#97;&#114;&#108;&#105;&#101;&#46;&#109;&#105;&#104;&#114;&#97;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;'>&#99;&#104;&#97;&#114;&#108;&#105;&#101;&#46;&#109;&#105;&#104;&#114;&#97;&#110;&#64;&#103;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#109;</a><br>
-            2386 Santa Catalina Street<br>
             Palo Alto, CA 94303<br>
-            (650) 714-7567<br>
             <a href="https://www.linkedin.com/in/cmihran">linkedin.com/in/cmihran</a>
         </p>
         
@@ -25,7 +23,7 @@
                     <ul>
                         <li>Highly proficient in Java, JavaScript, PHP</li>
                         <li>Fundamental knowledge of C++, C# and Python</li>
-                        <li>Web page design; HTML/CSS/XML/JSON/AJAX/SQL</li>
+                        <li>Web front-end and back-end; HTML/CSS/XML/JSON/AJAX/SQL</li>
                         <li>Certified Solidworks Associate (C.A.D. Program)</li>
                     </ul>
                     
